# mrag

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md  config.json
src/: chunk.cc  chunk.h  config.cc  config.h  document.cc  document.h  embeddingengine.cc  embeddingengine.h  generationengine.cc  generationengine.h  llamamodel.cc  llamamodel.h  main.cc  mragapp.cc  mragapp.h  vectordatabase.cc  vectordatabase.h
